[package]
name = "xoodyakrb"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
xoodyak = { git = "https://github.com/midnight-wonderer/rust-xoodyak.git", branch = "feature/actually-no-std", default-features = false }

[build-dependencies]
rb-sys-env = "0.2"

[dev-dependencies]
rb-sys-test-helpers = { version = "0.2" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(digest_use_rb_ext_resolve_symbol)',
] }
